Fix best members issue in dark mode

--- a/src/modules/static-pages/home/components/bestMembers/style.module.css
+++ b/src/modules/static-pages/home/components/bestMembers/style.module.css
@@ -6,6 +6,7 @@
 .best-members img {
   display: block;
   margin: auto;
+  border-radius: 50%;
   margin-bottom: 2rem;
   transition: all 0.3s ease;
 }
